--- a/page/css/chart.css
+++ b/page/css/chart.css
@@ -22,10 +22,11 @@
     font-size: smaller;
 }
 
-.chart-item{
+/* .chart-item{
     width: 100%;
+    height: 100%;
     aspect-ratio : 1/1;
-}
+} */
 
 .chart-status-img{
     height: 25px;
