--- a/docs/css/chart.css
+++ b/docs/css/chart.css
@@ -10,6 +10,15 @@
     margin: 15px 10px;
 }
 
+.card-news-list{
+    margin: 0px 10px;
+}
+
+/* .table-striped>tbody>tr:nth-child(odd)>td, 
+.table-striped>tbody>tr:nth-child(odd)>th {
+   background-color: rgb(186, 237, 237); // Choose your own color here
+ } */
+
 .chart-button-group{
     margin-left: 10px;
     padding: 0px 0px;
@@ -22,9 +31,19 @@
     font-size: smaller;
 }
 
+.chart-item-box{
+    padding: 0px 3px;
+    height: 300px;
+    width: 100%;
+}
+
+.chart-status-graph-box{
+    padding: 0px 10px;
+}
+
 /* .chart-item{
     width: 100%;
-    height: 100%;
+    height: 200px;
     aspect-ratio : 1/1;
 } */
 
